<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fCalculator">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/almostblack">

        <LinearLayout
            android:id="@+id/p_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <EditText
                android:id="@+id/hasil1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="end"
                android:text="@string/btn_hasill"
                android:inputType="textPersonName"
                android:focusable="false"
                android:clickable="false"
                android:lines="2"
                android:maxLines="2"
                android:scrollHorizontally="true"
                android:textColor="@color/white"
                android:textSize="60sp"
                />

            <EditText
                android:id="@+id/hasil2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="end"
                android:ems="10"
                android:text="@string/txt_result"
                android:focusable="false"
                android:clickable="false"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_cl1"
            android:layout_width="410dp"
            android:layout_height="83dp"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/p_hasil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clr"
                android:layout_width="101dp"
                android:layout_height="80dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                style="@style/button_calculaterorang"
                android:text="@string/btn_clr"
                android:textSize="25sp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_bckspc"
                style="@style/button_calculaterorang"
                android:layout_width="101dp"
                android:layout_height="80dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:text="@string/btn_backspace"
                android:textSize="25sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mdl"
                android:layout_width="101dp"
                android:layout_height="80dp"
                android:text="@string/btn_mdl"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                style="@style/button_calculaterorang" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_bagi"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterorang"
                android:text="@string/btn_bagi"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_cl2"
            android:layout_width="410dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cl1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_7"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_8"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_9"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kali"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterorang"
                android:text="@string/btn_x"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_cl3"
            android:layout_width="410dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cl2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_4"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_5"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_6"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_krg"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterorang"
                android:text="@string/btn_krg"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_cl4"
            android:layout_width="410dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cl3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_1"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_2"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_3"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterorang"
                android:text="@string/btn_plus"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_cl5"
            android:layout_width="410dp"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintTop_toBottomOf="@id/btn_cl4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_koma"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_koma"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="o"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_titik"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/button_calculaterputih"
                android:text="@string/btn_titik"
                android:textSize="25sp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hasil"
                android:layout_width="101dp"
                android:layout_height="80dp"
                style="@style/btn_hasil"
                android:text="@string/btn_hasil"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>