<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="30sp"
        android:textColor="@color/birudark"
        android:textStyle="bold"
        style="@style/TextAppearance.MaterialComponents.Headline1"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit"
            style="@style/ButtonPink"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/txt_btnedit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="60dp"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/profile_1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile1"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_profile"
            style="@style/TectInputLayout"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/nama_profile"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_profile"
            style="@style/TectInputLayout"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email_profile"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/no_profile"
            style="@style/TectInputLayout"
            android:orientation="horizontal"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/kelas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/no2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/matkul"
            style="@style/TectInputLayout"
            android:orientation="horizontal"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/txt_matkul"
            app:startIconDrawable="@drawable/matkul">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matkul2"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>